fix text and work on wrap section two

--- a/style.css
+++ b/style.css
@@ -89,27 +89,47 @@ button:hover {
 }
 
 .second-section {
-    display: flex;
-    flex-wrap: wrap;
+    padding: 30px;
 }
 
 .information-header {
     font-size: 36px;
     color: #1F2937;
     font-weight: 900;
-    margin: 30px;
+    margin-bottom: 30px;
     text-align: center;
-    flex: 1 0 auto;
 }
+
+.benefit {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.benefits {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 32px;
+}
+
 
 .benefit-image {
-    height: 200px;
     width: 200px;
+    height: 200px;
 }
 
+.benefit-text {
+    width: 208px;
+    text-align: center;
+    font-size: 18px;
+}
+
+
 .benefit-image img {
-    height: 100%;
     width: 100%;
+    height: 100%;
     object-fit: cover;
     border: 4px solid rgb(25, 92, 237);
     border-radius: 16px;
